<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie4"
        android:layout_width="900dp"
        android:layout_height="1500dp"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/citylife"
        tools:ignore="MissingConstraints"></com.airbnb.lottie.LottieAnimationView>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="145dp"
        android:layout_height="35dp"
        android:layout_marginTop="476dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/people"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toEndOf="@+id/p5"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/p5"
        android:layout_width="57dp"
        android:layout_height="51dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="468dp"
        android:contentDescription="@string/rr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_play3_circle_24" />

    <ImageView
        android:id="@+id/p4"
        android:layout_width="57dp"
        android:layout_height="51dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="390dp"
        android:contentDescription="@string/qq"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_play3_circle_24" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="151dp"
        android:layout_height="39dp"
        android:layout_marginTop="400dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/footstep"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toEndOf="@+id/p4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="222dp"
        android:layout_height="33dp"
        android:layout_marginTop="324dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/trainpass"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toEndOf="@+id/p3"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/p3"
        android:layout_width="57dp"
        android:layout_height="51dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="314dp"
        android:contentDescription="@string/tt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_play3_circle_24" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="163dp"
        android:layout_height="38dp"
        android:layout_marginTop="230dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/traffic"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toEndOf="@+id/p2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/p2"
        android:layout_width="57dp"
        android:layout_height="51dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="224dp"
        android:contentDescription="@string/ee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_play3_circle_24" />

    <ImageView
        android:id="@+id/p1"
        android:layout_width="57dp"
        android:layout_height="51dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="132dp"
        android:contentDescription="@string/eew"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_play3_circle_24" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="164dp"
        android:layout_height="42dp"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/rain_city"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.254"
        app:layout_constraintStart_toEndOf="@+id/p1"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>