<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/header"
        android:layout_width="521dp"
        android:layout_height="850dp"
        android:contentDescription="@string/todo444"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/studybg" />

    <ImageView
        android:id="@+id/summer"
        android:layout_width="128dp"
        android:layout_height="120dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="184dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/summer" />

    <ImageView
        android:id="@+id/mountain"
        android:layout_width="121dp"
        android:layout_height="120dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="44dp"
        android:contentDescription="@string/todo6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mountain" />

    <ImageView
        android:id="@+id/rain"
        android:layout_width="120dp"
        android:layout_height="122dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/todo5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summer"
        app:srcCompat="@drawable/rains"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/study"
        android:layout_width="120dp"
        android:layout_height="110dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="44dp"
        android:contentDescription="@string/todo3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mountain"
        app:srcCompat="@drawable/studying" />


</androidx.constraintlayout.widget.ConstraintLayout>