<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie4"
        android:layout_width="900dp"
        android:layout_height="1500dp"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/campingguitar"
        tools:ignore="MissingConstraints"></com.airbnb.lottie.LottieAnimationView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="146dp"
        android:layout_height="36dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/guitar2"
        android:textColor="#B2B2B2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toEndOf="@+id/plays1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.593" />

    <ImageView
        android:id="@+id/plays5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="92dp"
        android:contentDescription="@string/todo1123"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59"
        app:srcCompat="@drawable/ic_baseline_play2_circle_24"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="155dp"
        android:layout_height="39dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/campfire"
        android:textColor="#B2B2B2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toEndOf="@+id/plays1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.486" />

    <ImageView
        android:id="@+id/plays4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="92dp"
        android:contentDescription="@string/todo14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.476"
        app:srcCompat="@drawable/ic_baseline_play2_circle_24"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="167dp"
        android:layout_height="38dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/rain2"
        android:textColor="#B2B2B2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toEndOf="@+id/plays1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <ImageView
        android:id="@+id/plays3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="92dp"
        android:contentDescription="@string/todo16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.379"
        app:srcCompat="@drawable/ic_baseline_play2_circle_24"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="155dp"
        android:layout_height="34dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/river"
        android:textColor="#B2B2B2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toEndOf="@+id/plays1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.284" />

    <ImageView
        android:id="@+id/plays2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="92dp"
        android:contentDescription="@string/todo112"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.277"
        app:srcCompat="@drawable/ic_baseline_play2_circle_24"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/plays1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="92dp"
        android:contentDescription="@string/todo13"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172"
        app:srcCompat="@drawable/ic_baseline_play2_circle_24" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="150dp"
        android:layout_height="32dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/insects"
        android:textColor="#B2B2B2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.341"
        app:layout_constraintStart_toEndOf="@+id/plays1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181" />


</androidx.constraintlayout.widget.ConstraintLayout>